--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "face-id",
+  "name": "app-2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.26.0",
+    "@trpc/next": "^10.26.0",
+    "@trpc/react-query": "^10.26.0",
+    "@trpc/server": "^10.26.0",
     "clsx": "^1.2.1",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.6",
+    "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
