--- a/app/.env.example
+++ b/app/.env.example
@@ -12,3 +12,8 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+SIGNATURE_HASH_ALGORITHM="SHA256"
+FEATURE_EXTRACTOR_URL="http://example.com"
+AUTHENTICATOR_URL="http://example.com"
+UPSTASH_URL="https://example.com"
+UPSTASH_TOKEN="xxx"
