--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,11 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@upstash/redis": "^1.21.0",
     "clsx": "^1.2.1",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redis": "^4.6.6",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
