--- a/app/.env.example
+++ b/app/.env.example
@@ -15,5 +15,7 @@
 SIGNATURE_HASH_ALGORITHM="SHA256"
 FEATURE_EXTRACTOR_URL="http://example.com"
 AUTHENTICATOR_URL="http://example.com"
-UPSTASH_URL="https://example.com"
-UPSTASH_TOKEN="xxx"
+CSRF_PREFIX="csrf:"
+PUBKEY_PREFIX="pubkey:"
+# UPSTASH_URL="https://example.com"
+# UPSTASH_TOKEN="xxx"
