--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.7",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
