--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.2.1",
     "next": "^13.4.2",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "redis": "^4.6.7",
     "superjson": "1.12.2",
