--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
@@ -17,7 +18,9 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "@upstash/redis": "^1.21.0",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.244.0",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
